--- a/flask_repo/templates/index_1.html
+++ b/flask_repo/templates/index_1.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block body %}
-    <form method="post">
+    <form action="/greet" method="post">
         <input autocomplete="off" autofocus name="name" placeholder="Name" type="text">
         <button type=""submit>Greet</button>
     </form>
